--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
   - 5.4
   
 script: 
-  - phpunit  --log-junit shippable/testresults/junit.xml --coverage-xml shippable/codecoverage test.php
+  - phpunit  --log-junit shippable/testresults/junit.xml --coverage-xml shippable/codecoverage calculator.php
 
 
 
